refactor(nodes): 优化节点系统代码结构
- 将 ArrayList 的 get(0) 和 get(size()-1) 替换为 getFirst() 和 getLast()
- 将多个 if 语句替换为 switch 表达式以改进节点 ID 映射逻辑
- 在 JavaDoc 注释中添加段落标记增强文档可读性